# mcp-second-brain

./: .env.example  .gitignore  CONNECTING.md  Dockerfile  README.md  pyproject.toml  supabase-config.md
Plans/: greedy-herding-cloud.md  zazzy-pondering-harp.md
docs/: RESEARCH.md  api-reference.md  architecture.md  authentication.md  configuration.md  database.md  deployment.md  endpoints.md  frontend.md  threat-model.md
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.ts  style.css
frontend/src/lib/: database.types.ts
frontend/src/pages/: consent.ts  dashboard.ts  login.ts  signup.ts
migrations/: 001_initial_schema.sql  002_fix_hybrid_search.sql  003_hybrid_search_bank_id.sql  004_bank_limit_trigger.sql
src/: config.py  embeddings.py  main.py  metadata.py  ratelimit.py  server.py
src/auth/: jwt.py  middleware.py  provider.py
src/db/: banks.py  connection.py  memories.py  profiles.py
src/tools/: memory_tools.py
tests/: conftest.py  test_auth_jwt.py  test_config.py  test_db_banks.py  test_db_connection.py  test_db_memories.py  test_db_profiles.py  test_embeddings.py  test_main.py  test_memory_tools.py  test_metadata.py  test_middleware.py  test_ratelimit.py  test_server.py
